html routing, api routing working

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="jumbotron" style="background-image: url(../images/Friends.jpg); width:full; height: 400px;">
+  <div class="jumbotron" style="background-image: url('Friends.jpg'); width:full; height: 400px;">
     <h1 class="text-center">
       <i class="fab fa-facebook-square"> FriendFinder&nbsp</i>
       <i class="fab fa-facebook-square fa-flip-horizontal"> </i>
