fixed static image for background

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Friend Finder</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
@@ -11,7 +12,7 @@
 </head>
 
 <body>
-  <div class="jumbotron" style="background-image: url('Friends.jpg'); width:full; height: 400px;">
+  <div class="jumbotron">
     <h1 class="text-center">
       <i class="fab fa-facebook-square"> FriendFinder&nbsp</i>
       <i class="fab fa-facebook-square fa-flip-horizontal"> </i>
