apiRoutes checkScore function added, lots of little fixes

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -14,12 +14,12 @@
 <body>
   <div class="jumbotron">
     <h1 class="text-center">
-      <i class="fab fa-facebook-square"> FriendFinder&nbsp</i>
+      <i class="fab fa-facebook-square"><span id="header"> FriendFinder&nbsp</span></i>
       <i class="fab fa-facebook-square fa-flip-horizontal"> </i>
       <hr>
       <div>
         <h2 class="text-center" style="color:white">Answer a few basic <span style="color:black">questions.</span></h2>
-        <h2 class="text-center" style="color:white">Then find the friend with the gr<span style="color:black">eate</span>st<span style="color:black"> compatabili</span>ty!</h2>
+        <h2 class="text-center" style="color:white">Then find the friend with the gr<span style="color:black">eate</span>st<span style="color:black"> compatability!</span></h2>
       </div>
       <br>
 
