--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,16 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <title>FriendFinder Survey</title>
+  <script src="https://code.jquery.com/jquery.js"></script>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery.js"></script>
+  <!-- Bootstrap Modal -->
+
+
 </head>
 
 
 <body>
+  
 
   <div class="container">
     <div class="row">
@@ -40,7 +44,7 @@
       <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel1" required>
-          <option value="">Select an Option</option>
+          <option value>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -54,7 +58,7 @@
       <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel2" required>
-          <option value="">Select an Option</option>
+          <option value>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -68,7 +72,7 @@
       <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel3" required>
-          <option value="">Select an Option</option>
+          <option value>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -82,7 +86,7 @@
       <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel4" required>
-          <option value="">Select an Option</option>
+          <option value>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -96,7 +100,7 @@
       <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel5" required>
-          <option value="">Select an Option</option>
+          <option value>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -110,7 +114,7 @@
       <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel6" required>
-          <option value="">Select an Option</option>
+          <option value>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -124,7 +128,7 @@
       <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel7" required>
-          <option value="">Select an Option</option>
+          <option value>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -138,7 +142,7 @@
       <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel8" required>
-          <option value="">Select an Option</option>
+          <option value>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -152,7 +156,7 @@
       <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel9" required>
-          <option value="">Select an Option</option>
+          <option value>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -166,7 +170,7 @@
       <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel10" required>
-          <option value="">Select an Option</option>
+          <option value=>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -175,7 +179,7 @@
         </select>
       </div>
       <hr>
-      <button type="button" class="btn btn-info btn-md" style="width:100%" data-toggle="modal" data-target="#results-modal">
+      <button type="button" class="btn btn-info btn-md" id="submit-btn" style="width:100%" data-toggle="modal" data-target="#resultsModal">
         <h4>
           <i class="far fa-check-circle"></i> Submit</h4>
       </button>
@@ -192,83 +196,103 @@
       </footer>
     </div>
   </div>
-  <div class="modal fade" id="results-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalCenterTitle">Friend Match</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <h2 id="match-name"></h2>
-          <img id="match-img" src="" alt="">
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
   
   <script type="text/javascript">
 
-    $("button").on("click", function () {
-      // event.preventDefault();
+    $("body").on("click", "#submit-btn", function () {
+      event.preventDefault();
 
-      // Gets element from form and creates new object
-      var newFriendsData = {
-        name: $('#name').val().trim(),
-        photo: $('#photo').val().trim(),
-        scores: [
-          $('#sel1').val(),
-          $('#sel2').val(),
-          $('#sel3').val(),
-          $('#sel4').val(),
-          $('#sel5').val(),
-          $('#sel6').val(),
-          $('#sel7').val(),
-          $('#sel8').val(),
-          $('#sel9').val(),
-          $('#sel10').val()
-        ]
-      };
-      console.log(newFriendsData);
-
-      var currentURL = window.location.origin;
-
-      $.post(currentURL + "/api/friends", newFriendsData,
-        function (data) {
-
-          // AJAX post the data to the friends API.
-          $.post("/api/friends", userData, function (data) {
-
-            // Grab the result from the AJAX post so that the best match's name and photo are displayed.
-            $("#match-name").text(data.name);
-            $("#match-img").attr("src", data.photo);
-
-            // Show the modal with the best match
-            $("#results-modal").modal("toggle");
-
-          });
-
-          // Clear the form when submitting
-          $('#name').val("");
-          $('#photo').val("");
-          $('#sel1').val("");
-          $('#sel3').val("");
-          $('#sel4').val("");
-          $('#sel6').val("");
-          $('#sel7').val("");
-          $('#sel8').val("");
-          $('#sel9').val("");
-          $('#sel10').val("");
+      // Form validation
+      function validateForm() {
+        var isValid = true;
+        $(".form-control").each(function () {
+          if ($(this).val() === "") {
+            isValid = false;
+          }
         });
+        return isValid;
+      }
+
+      if (validateForm()) {
+        // Gets element from form and creates new object
+        var newFriendsData = {
+          name: $('#name').val().trim(),
+          photo: $('#photo').val().trim(),
+          scores: [
+            $('#sel1').val(),
+            $('#sel2').val(),
+            $('#sel3').val(),
+            $('#sel4').val(),
+            $('#sel5').val(),
+            $('#sel6').val(),
+            $('#sel7').val(),
+            $('#sel8').val(),
+            $('#sel9').val(),
+            $('#sel10').val()
+          ]
+        };
+
+        var currentURL = window.location.origin;
+
+        //AJAX post the data to the friends API.
+        $.post(currentURL + "/api/friends", newFriendsData, function (data) {
+          console.log(data);
+          // Grab the result from the AJAX post so that the best match's name and photo are displayed.
+          $("#match-name").text(data.name);
+          $("#match-img").attr("src", data.photo);
+          
+          // Show the modal with the best match
+          $('#resultsModal').modal('show');
+
+        });
+
+        // Clear the form when submitting
+        $('#name').val("");
+        $('#photo').val("");
+        $('#sel1').val("");
+        $('#sel2').val("");
+        $('#sel3').val("");
+        $('#sel4').val("");
+        $('#sel5').val("");
+        $('#sel6').val("");
+        $('#sel7').val("");
+        $('#sel8').val("");
+        $('#sel9').val("");
+        $('#sel10').val("");
+      } else {
+        alert("Please fill out all fields");
+      }
+
     });
 
   </script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+    <div class="modal fade" id="resultsModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Friend Match</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <h2 id="match-name"></h2>
+              <img id="match-img">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+  
 </body>
 
 </html>
