--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,17 +7,21 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
   <!-- Bootstrap Modal -->
-
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 
 </head>
 
-
 <body>
-  
 
   <div class="container">
     <div class="row">
@@ -41,7 +45,7 @@
       <h3>
         <b>Question 1</b>
       </h3>
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>Music is a great source of inspiration to you.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel1" required>
           <option value>Select an Option</option>
@@ -55,7 +59,7 @@
       <h3>
         <b>Question 2</b>
       </h3>
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You believe the 'Golden Rule' is the most important rule to live by.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel2" required>
           <option value>Select an Option</option>
@@ -69,7 +73,7 @@
       <h3>
         <b>Question 3</b>
       </h3>
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You recharge by spending time alone.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel3" required>
           <option value>Select an Option</option>
@@ -83,7 +87,7 @@
       <h3>
         <b>Question 4</b>
       </h3>
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You prefer cats for pets.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel4" required>
           <option value>Select an Option</option>
@@ -97,7 +101,7 @@
       <h3>
         <b>Question 5</b>
       </h3>
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>Success is measured by one's wealth.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel5" required>
           <option value>Select an Option</option>
@@ -111,7 +115,7 @@
       <h3>
         <b>Question 6</b>
       </h3>
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>Astrology can give you accurate predictions of your future.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel6" required>
           <option value>Select an Option</option>
@@ -125,7 +129,7 @@
       <h3>
         <b>Question 7</b>
       </h3>
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You feel obligated to help the less fortunate.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel7" required>
           <option value>Select an Option</option>
@@ -139,7 +143,7 @@
       <h3>
         <b>Question 8</b>
       </h3>
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>Revenge is a drink best served cold.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel8" required>
           <option value>Select an Option</option>
@@ -153,7 +157,7 @@
       <h3>
         <b>Question 9</b>
       </h3>
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You are out for your own personal gain.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel9" required>
           <option value>Select an Option</option>
@@ -167,7 +171,7 @@
       <h3>
         <b>Question 10</b>
       </h3>
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You are indifferent to the feelings of others.</h4>
       <div class="form-group" style="width: 160px">
         <select class="form-control" id="sel10" required>
           <option value=>Select an Option</option>
@@ -196,7 +200,26 @@
       </footer>
     </div>
   </div>
-  
+  <div class="modal fade" id="resultsModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Friend Match</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <h2 id="match-name"></h2>
+          <img id="match-img">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script type="text/javascript">
 
     $("body").on("click", "#submit-btn", function () {
@@ -240,7 +263,7 @@
           // Grab the result from the AJAX post so that the best match's name and photo are displayed.
           $("#match-name").text(data.name);
           $("#match-img").attr("src", data.photo);
-          
+
           // Show the modal with the best match
           $('#resultsModal').modal('show');
 
@@ -266,33 +289,7 @@
     });
 
   </script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-    <div class="modal fade" id="resultsModal" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Friend Match</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <h2 id="match-name"></h2>
-              <img id="match-img">
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-  
-  
+
 </body>
 
 </html>
